# communication-protocol

./: Cargo.toml  README.md
src/: data_entry.rs  entry.rs  entry_types.rs  lib.rs
