[package]
name = "communication-protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc = "3.2.1"
rkyv = { version = "0.7.44", default-features = false, features = ["archive_le", "size_16", "strict"] }
